Se termino el reto1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
         "anio",
+        "Digite",
         "Ejecucion",
         "Instanciamos",
         "Instanciar",
         "Introduccion",
+        "multiplicacion",
         "registar",
         "Tecnologia"
     ]
