Se sobrecargo un metodo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Instanciar",
         "Introduccion",
         "multiplicacion",
+        "operacion",
         "registar",
         "Tecnologia"
     ]
