Se termino el reto1 y Le hacen falta los ultimos detalles al reto3
Terminar reto 3 y corregir errores

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,17 @@
         "anio",
         "Digite",
         "Ejecucion",
+        "htrbajada",
+        "hvalor",
         "Instanciamos",
         "Instanciar",
         "Introduccion",
         "multiplicacion",
         "operacion",
+        "PESOBAJO",
+        "PESOIDEAL",
         "registar",
+        "reteica",
         "Tecnologia"
     ]
 }
