Se creo y termino el reto4
Se finalizo el reto4, hace falta documentar los retos

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Ejecucion",
             "request": "launch",
             "mainClass": "Introduccion.Figuras.Ejecucion",
+            "projectName": "POO_1fd2e4a"
+        },
+        {
+            "type": "java",
+            "name": "Ejecucion",
+            "request": "launch",
+            "mainClass": "Introduccion.Figuras.Ejecucion",
             "projectName": "POO_8d75df06"
         },
         {
