--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "operacion",
         "PESOBAJO",
         "PESOIDEAL",
+        "rectangulo",
         "registar",
         "reteica",
         "Tecnologia"
