--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Ejecucion",
         "htrbajada",
         "hvalor",
+        "instanciada",
         "Instanciamos",
         "Instanciar",
         "Introduccion",
