Se modifico la documentación

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Instanciar",
         "Introduccion",
         "multiplicacion",
+        "opcion",
         "operacion",
         "PESOBAJO",
         "PESOIDEAL",
